dev-env/openproject-extra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openproject
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: openproject.homelab.local
spec:
  ingressClassName: nginx-internal
  rules:
  - host: openproject.<homelab-domain>
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: openproject
              port:
                name: http
  tls:
    - hosts:
      - openproject.<homelab-domain>
      secretName: "openproject.<homelab-domain>-cert"
