dev-env/openproject-extra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openproject
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16,10.0.0.0/8
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Get Homepage configuration
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Project management
    gethomepage.dev/group: Dev Env
    gethomepage.dev/icon: openproject.png
    gethomepage.dev/name: OpenProject
spec:
  ingressClassName: nginx
  rules:
  - host: openproject.<homelab-domain>
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: openproject
              port:
                name: http
  tls:
    - hosts:
      - openproject.<homelab-domain>
      secretName: "openproject.<homelab-domain>-cert"
